--- a/app/src/main/res/layout/cardview_item.xml
+++ b/app/src/main/res/layout/cardview_item.xml
@@ -4,7 +4,7 @@
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
     android:layout_width="190dp"
-    android:layout_height="230dp"
+    android:layout_height="250dp"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_margin="8dp"
     cardview:cardCornerRadius="4dp">
@@ -30,7 +30,8 @@
             android:gravity="center_horizontal"
             android:text="Game Title"
             android:textColor="#2d2d2d"
-            android:textSize="16sp" />
-
+            android:textSize="18sp"
+            android:padding="5dp"
+            />
     </LinearLayout>
 </android.support.v7.widget.CardView>
