Modificaões de estilo

--- a/app/src/main/res/layout/activity_main__main.xml
+++ b/app/src/main/res/layout/activity_main__main.xml
@@ -5,12 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity.MainActivity_Main"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:background="#2d2d2d">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview_id"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"/>
 
 
 </LinearLayout>
