--- a/app/src/main/res/layout/activity_information_activity.xml
+++ b/app/src/main/res/layout/activity_information_activity.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.Information_activity">
+    tools:context=".Activity.Information_activity"
+    android:background="#2d2d2d">
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="10dp"
-        android:padding="10dp">
+        android:padding="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,12 +25,14 @@
                 android:text="Title"
                 android:gravity="center"
                 android:textSize="40sp"
-                android:textColor="#2d2d2d"/>
+                android:textColor="#BDBDBD"
+                android:layout_marginBottom="5dp"
+                />
 
             <com.google.android.youtube.player.YouTubePlayerView
                 android:id="@+id/game_trailer"
                 android:layout_width="match_parent"
-                android:layout_height="200dp" />
+                android:layout_height="250dp"/>
 
             <TextView
                 android:id="@+id/info_date"
@@ -39,7 +42,7 @@
                 android:text="Date"
                 android:gravity="left"
                 android:textSize="20sp"
-                android:textColor="#2d2d2d"/>
+                android:textColor="#BDBDBD"/>
             <TextView
                 android:id="@+id/info_platforms"
                 android:layout_width="match_parent"
@@ -48,7 +51,7 @@
                 android:text="Platforms"
                 android:gravity="left"
                 android:textSize="20sp"
-                android:textColor="#2d2d2d"/>
+                android:textColor="#BDBDBD"/>
 
 
 
