--- a/app/src/main/res/layout/cardview_item.xml
+++ b/app/src/main/res/layout/cardview_item.xml
@@ -7,7 +7,7 @@
     android:layout_height="250dp"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_margin="8dp"
-    cardview:cardCornerRadius="4dp">
+    cardview:cardCornerRadius="5dp">
 
 
     <LinearLayout
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="190dp"
             android:scaleType="centerCrop"
-            android:background="#2d2d2d"/>
+            android:background="#424242"/>
 
         <TextView
             android:id="@+id/game_title"
@@ -31,7 +31,6 @@
             android:text="Game Title"
             android:textColor="#2d2d2d"
             android:textSize="18sp"
-            android:padding="5dp"
-            />
+            android:padding="5dp"/>
     </LinearLayout>
 </android.support.v7.widget.CardView>
